Big cleanup, moved queries out of search and into the seed file instead.
Need to cleanup seed and also implement the checkbox feature mentioned in boxesAndButton.js.

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -4,6 +4,7 @@
 this process again at the newfound ingredient of tab 1. Repeat until no more ingredients. 
 The last ingredient is dealt with individually, possibly due to bad implementation.-->
 <!-- EJS bug where details is rendered as div on refresh? -->
+<%=console.log(ingredients)%>
     <h1 class="text-center"><%=ingredients[0].data.number%> &times; <img src="<%=ingredients[0].data.image%>" alt=""> <%=ingredients[0].item%></h1>
     <div class="my-3 d-flex justify-content-center">
         <button class="btn btn-success" id="uncheck">Uncheck all</button>
@@ -22,9 +23,9 @@ The last ingredient is dealt with individually, possibly due to bad implementati
                         <%console.log(`[Inner Loop] item=${ingredients[i].item} tab=${ingredients[i].tab} idx=${idx} i=${i}`)%>
                         <%if(ingredients[i+1].tab===1){%>
                             <p>
-                                <summary style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-weight: <%=600-50*ingredients[i].tab%>;"> 
+                                <summary style="padding-left:<%=ingredients[i].tab*1.5%>em;font-weight: <%=600-50*ingredients[i].tab%>;" > 
                                     <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block d-md-inline mx-2 form-check-input">
-                                        <label class="form-check-label" for="<%=i%>">
+                                        <label class="form-check-label tab<%=ingredients[i].tab%>" for="<%=i%>">
                                             <%=ingredients[i].data.number%> &times; <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp">
                                         </label>
                                 </summary>
@@ -34,9 +35,9 @@ The last ingredient is dealt with individually, possibly due to bad implementati
                         <% }%>
                         <p>
                             <%console.log(`[Inner Loop] ADDING TO PAGE item=${ingredients[i].item} tab=${ingredients[i].tab} idx=${idx} i=${i}`)%>
-                            <summary style="padding-left:<%=ingredients[i].tab*(ingredients[i].tab)/2%>em;font-weight: <%=600-50*ingredients[i].tab%>;">
+                            <summary style="padding-left:<%=ingredients[i].tab*1.5%>em;font-weight: <%=600-50*ingredients[i].tab%>;" >
                                 <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block mx-2 form-check-input">
-                                    <label class="form-check-label" for="<%=i%>">
+                                    <label class="form-check-label tab<%=ingredients[i].tab%>" for="<%=i%>">
                                         <%=ingredients[i].data.number%> &times; <img src="<%=ingredients[i].data.image%>" alt=""> <%=ingredients[i].item%> <img src="<%=ingredients[i].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[i].data.totalPrice%>gp" >
                                     </label>
                             </summary>
@@ -48,9 +49,9 @@ The last ingredient is dealt with individually, possibly due to bad implementati
                     <% if(idx===ingredients.length-1){ %>
                         <p>
                             <%console.log(`[Inner Loop] LAST INGREDIENT item=${ingredients[idx].item} tab=${ingredients[idx].tab} idx=${idx}`)%>
-                            <summary style="padding-left:<%=ingredients[idx].tab*(ingredients[idx].tab)/2%>em;font-weight: <%=600-50*ingredients[idx].tab%>;">
+                            <summary style="padding-left:<%=ingredients[idx].tab*1.5%>em;font-weight: <%=600-50*ingredients[idx].tab%>;" >
                                 <input type="checkbox" id="<%=idx%>" class="d-none d-md-inline-block mx-2 form-check-input">
-                                    <label class="form-check-label" for="<%=idx%>">
+                                    <label class="form-check-label tab<%=ingredients[i].tab%>" for="<%=idx%>">
                                         <%=ingredients[idx].data.number%> &times; <img src="<%=ingredients[idx].data.image%>" alt=""> <%=ingredients[idx].item%> <img src="<%=ingredients[idx].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[idx].data.totalPrice%>gp">
                                     </label>
                             </summary>
@@ -59,9 +60,9 @@ The last ingredient is dealt with individually, possibly due to bad implementati
                     <% if(idx+1===ingredients.length-1){ %>
                         <p>
                             <%console.log(`[Inner Loop] LAST INGREDIENT item=${ingredients[idx+1].item} tab=${ingredients[idx+1].tab} idx=${idx+1}`)%>
-                            <summary style="padding-left:<%=ingredients[idx+1].tab*(ingredients[idx+1].tab)/2%>em;font-weight: <%=600-50*ingredients[idx+1].tab%>;">
+                            <summary style="padding-left:<%=ingredients[idx+1].tab*1.5%>em;font-weight: <%=600-50*ingredients[idx+1].tab%>;" >
                                 <input type="checkbox" id="<%=idx+1+1%>" class="d-none d-md-inline-block mx-2 form-check-input">
-                                    <label class="form-check-label" for="<%=idx+1%>">
+                                    <label class="form-check-label tab<%=ingredients[i].tab%>" for="<%=idx+1%>">
                                         <%=ingredients[idx+1].data.number%> &times; <img src="<%=ingredients[idx+1].data.image%>" alt=""> <%=ingredients[idx+1].item%> <img src="<%=ingredients[idx+1].data.coinPile%>" alt="" class="d-none d-md-inline" data-bs-toggle="tooltip" title="<%=ingredients[idx+1].data.totalPrice%>gp">
                                     </label>
                             </summary>
@@ -70,20 +71,18 @@ The last ingredient is dealt with individually, possibly due to bad implementati
                 </details>
                 <% } %>
             <% }) %>
-        <% }else if(displaySetting==="essential"){ %>
-            <div class="col-xl-12 col-sm-12 d-flex flex-column align-items-center">       
+        <% }else if(displaySetting === "essential"){ %> 
+                <div class="col-xl-12 col-sm-12 d-flex flex-column align-items-center">       
                     <%ingredients.slice(1).forEach((ingredient,i)=>{%>    
-                            <span style="font-size: 1.7em;">
-                                <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block form-check-input">
-                                    <label class="form-check-label" for="<%=i%>">
-                                        <%=ingredient.data.number%> &times; <img src="<%=ingredient.data.image%>"> <%=ingredient.item%> <img src="<%=ingredient.data.coinPile%>" class="d-none d-sm-inline" data-bs-toggle="tooltip" title="<%=ingredient.data.totalPrice%>gp">
-                                    </label>
-                            </span>
+                        <span style="font-size: 1.7em;">
+                            <input type="checkbox" id="<%=i%>" class="d-none d-md-inline-block form-check-input">
+                                <label class="form-check-label" for="<%=i%>">
+                                    <%=ingredient.data.number%> &times; <img src="<%=ingredient.data.image%>"> <%=ingredient.item%> <img src="<%=ingredient.data.coinPile%>" class="d-none d-sm-inline" data-bs-toggle="tooltip" title="<%=ingredient.data.totalPrice%>gp">
+                                </label>
+                        </span>
                     <%})%>
-            </div>
-            
+                </div>
         <% }else{ %>
-
             <p>Error</p>    
         <% } %>  
 
@@ -92,10 +91,15 @@ The last ingredient is dealt with individually, possibly due to bad implementati
     <a class="btn btn-success" href="/">Search for a new potion</a>
 </div>
 <script src="/javascripts/boxesAndButton.js"></script>
+
 <script>
 const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
 const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
   return new bootstrap.Tooltip(tooltipTriggerEl)
 })
 console.log(tooltipList)
+</script>
+
+<script>
+    
 </script>
