--- a/public/stylesheets/resultsStyles.css
+++ b/public/stylesheets/resultsStyles.css
@@ -1,3 +1,44 @@
 details {
     list-style-type:none;
 }
+
+.text-muted{
+    text-decoration: line-through;
+}
+
+.tab1{
+    border-bottom: 3.5px solid rgb(0, 0, 0);
+    padding-bottom:0.2rem;
+}
+.tab2{
+    border-bottom: 3.5px solid rgb(255, 157, 0);
+    padding-bottom:0.2rem;
+}
+.tab3{
+    border-bottom: 3.5px solid rgb(13, 58, 13);
+    padding-bottom:0.2rem;
+}
+.tab4{
+    border-bottom: 3.5px solid rgb(160, 151, 71);
+    padding-bottom:0.2rem;
+}
+.tab5{
+    border-bottom: 3.5px solid rgb(110, 32, 1);
+    padding-bottom:0.2rem;
+}
+.tab6{
+    border-bottom: 3.5px solid rgb(95, 16, 53);
+    padding-bottom:0.2rem;
+}
+.tab7{
+    border-bottom: 3.5px solid rgb(6, 144, 144);
+    padding-bottom:0.2rem;
+}
+.tab8{
+    border-bottom: 3.5px solid rgb(121, 121, 121);
+    padding-bottom:0.2rem;
+}
+.tab9{
+    border-bottom: 3.5px solid rgb(255, 252, 252);
+    padding-bottom:0.2rem;
+}
