--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,7 @@
       <div class="navbar-nav">
         <a class="nav-link fs-3" href="/" >Home</a>
         <a class="nav-link fs-3" href="#" data-bs-toggle="modal" data-bs-target="#aboutPotionChain">About</a>   
+        <a class="nav-link fs-3" href="#" data-bs-toggle="modal" data-bs-target="#supportedPotions" href="/" >Supported Potions</a>
       </div>
     </div>
   </div>
@@ -51,6 +52,28 @@
         </ul>
       </div>
       <div class="modal-footer">
+          <a href="https://github.com/morganchafe/PotionChain" class="btn btn-primary">Github</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal custom fade" id="supportedPotions" tabindex="-1" aria-labelledby="supportedPotionsLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="supportedPotionsLabel">Supported Potions</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Currently Potion Chain supports searches for the following potions: </p>
+        <ul>
+
+        </ul>
+      </div>
+      <div class="modal-footer">
+          <p>If a potion you searched for is not supported, contact me through Github and I will see about adding it.</p>
           <a href="https://github.com/morganchafe/PotionChain" class="btn btn-primary">Github</a>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
