Moved script into separate file

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -90,13 +90,7 @@ The last ingredient is dealt with individually, possibly due to bad implementati
     <a class="btn btn-success" href="/">Search for a new potion</a>
 </div>
 <script src="/javascripts/boxesAndButton.js"></script>
-
-<script>
-const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-  return new bootstrap.Tooltip(tooltipTriggerEl)
-})
-</script>
+<script src="/javascripts/bootstrapTooltips.js"></script>
 
 <script>
     
